--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,22 +7,23 @@
     <h1 class="govuk-heading-l">User Centered Funding Rules (UCFR) - Prototypes</h1>  
     <ul class="govuk-list govuk-!-font-size-19">
       <li>3-0
-        <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 govuk-!-font-weight-bold">
+        <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 ">
           <li>
-            Training Provider Rules Manuals<br>
-            <a href="/3-0/manual-home?manual=providers-manual-original&svgflow=false&textflow=false" class="govuk-link govuk-link--no-visited-state">Original PDF content</a><br>
-            <a href="/3-0/google?manual=providers-manual-original&svgflow=false&textflow=false" class="govuk-link govuk-link--no-visited-state">Original PDF content (from google)</a><br>
-            <a href="/3-0/manual-home?manual=providers-manual-original&svgflow=true&textflow=false" class="govuk-link govuk-link--no-visited-state">Original PDF content + flowchart</a><br>
-            <a href="/3-0/manual-home?manual=providers-manual-original&svgflow=false&textflow=true" class="govuk-link govuk-link--no-visited-state">Original PDF content + text decision tree</a>
+            <span class="govuk-!-font-weight-bold">Training Provider Rules Manuals</span><br>
+            <a href="/3-0/manual-home?manual=providers-manual-original&svgflow=false&textflow=false&resetSession=true" class="govuk-link govuk-link--no-visited-state">1 - original PDF content</a><br>
+            <a href="/3-0/google?manual=providers-manual-original&svgflow=false&textflow=false&resetSession=true" class="govuk-link govuk-link--no-visited-state">1 - original PDF content (from google)</a><br>
+            <a href="/3-0/manual-home?manual=providers-manual-original&svgflow=true&textflow=false&resetSession=true" class="govuk-link govuk-link--no-visited-state">1.1 - original PDF content + flowchart</a><br>
+            <a href="/3-0/manual-home?manual=providers-manual-original&svgflow=false&textflow=true&resetSession=true" class="govuk-link govuk-link--no-visited-state">1.2 - original PDF content + text decision tree</a><br>
+            <a href="/3-0/manual-home?manual=providers-manual-2&svgflow=false&textflow=false&resetSession=true" class="govuk-link govuk-link--no-visited-state">2 - original PDF content + updated english & maths content</a>
           </li>
           <li>
-              Employer Rules Manuals<br>
-              <a href="/3-0/manual-home?manual=employers-manual-original&svgflow=false" class="govuk-link govuk-link--no-visited-state">Original PDF content</a><br>
-              <a href="/3-0/google?manual=employers-manual-original&svgflow=false" class="govuk-link govuk-link--no-visited-state">Original PDF content (from google)</a>
+                <span class="govuk-!-font-weight-bold">Employer Rules Manuals</span><br>
+              <a href="/3-0/manual-home?manual=employers-manual-original&svgflow=false&resetSession=true" class="govuk-link govuk-link--no-visited-state">1 - original PDF content</a><br>
+              <a href="/3-0/google?manual=employers-manual-original&svgflow=false&resetSession=true" class="govuk-link govuk-link--no-visited-state">1 - original PDF content (from google)</a>
             </li>
             <li>
-                Training Provider Rules Heavy Edit<br>
-                <a href="/3-0/guidance" class="govuk-link govuk-link--no-visited-state">Funding for training apprentices in England (Heavy edit)</a>
+                    <span class="govuk-!-font-weight-bold">Training Provider Rules Heavy Edit</span><br>
+                <a href="/3-0/guidance&resetSession=true" class="govuk-link govuk-link--no-visited-state">Funding for training apprentices in England (Heavy edit)</a>
                 </li>
         </ul>
       </li>
