--- a/app/views/4-0/manual-updates.html
+++ b/app/views/4-0/manual-updates.html
@@ -51,7 +51,7 @@ GOV.UK Manual
                                         <span class="govuk-!-font-weight-bold">{{update.title}}</span><br><br>
                                         {% endif %}
                                     </dt>
-                                    <dd>
+                                    <dd id="{{update.rule}}">
                                         {% if update.rule %}<span class="">{{update.rule}}</span> - {% endif %}
                                         {{update.content}}
                                     </dd>
