--- a/app/views/3-0/manual-home.html
+++ b/app/views/3-0/manual-home.html
@@ -12,7 +12,7 @@
 <div id="manuals-frontend" class="manuals-frontend-body inner-block">
     
     {% set _manualHeaderTitle = _thisManual.title|safe + " " + _thisManual.date|safe %}
-    {% include "./includes/manual-header.html" %}
+    {% include "../includes/manual-header.html" %}
       
     <ol class="breadcrumb-trail">
         <li class="no-separator">Contents</li>
@@ -25,7 +25,7 @@
             
             <div class="call-to-action govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
-                    <p class="govuk-body"><a href="rules-list" class="govuk-link govuk-link--no-visited-state">View the rules in alternative formats (including PDF)</a> which you can download, print and view them offline.</p>
+                    <p class="govuk-body"><a href="rules-list" class="govuk-link govuk-link--no-visited-state">View the rules in alternative formats (including PDF)</a> which you can download, print and view offline.</p>
                 </div>
             </div>
 
