--- a/app/views/4-0/manual-home.html
+++ b/app/views/4-0/manual-home.html
@@ -123,9 +123,9 @@
                 <li class=" {{_sectionClasses}} ">
                     <a class="" href="manual-page?manual={{myData.manual}}&manualpage={{section.id}}">
                         <span class="subsection-title-text">{{section.title|safe}}</span>
-                        <span class="subsection-summary">
+                        <!-- <span class="subsection-summary">
                             Description goes here
-                        </span>
+                        </span> -->
                         {% if _sectionHasUpdates %}
                         <strong class="updates govuk-tag" style="margin-right: 5px; background: #005ea5">
                             Edited in 2018
