--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,24 +10,24 @@
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 ">
                     <li>
                         <span class="govuk-!-font-weight-bold">Training Provider Rules Manuals</span><br>
-                        <a href="/4-0/manual-home?manual=providers-manual-original&svgflow=false&textflow=false&resetSession=true"
+                        <a href="/4-0/manual-home?manual=providers-manual-original&resetSession=true"
                             class="govuk-link govuk-link--no-visited-state">original PDF content</a><br>
-                        <a href="/4-0/google?manual=providers-manual-original&svgflow=false&textflow=false&resetSession=true"
+                        <a href="/4-0/google?manual=providers-manual-original&resetSession=true"
                             class="govuk-link govuk-link--no-visited-state">original PDF content (from google)</a><br>
-                        <a href="/4-0/manual-home?manual=providers-manual-original&svgflow=true&textflow=false&resetSession=true"
+                        <a href="/4-0/manual-home?manual=providers-manual-original&svgflow=true&resetSession=true"
                             class="govuk-link govuk-link--no-visited-state">original PDF content + flowchart</a><br>
-                        <a href="/4-0/manual-home?manual=providers-manual-original&svgflow=false&textflow=true&resetSession=true"
+                        <a href="/4-0/manual-home?manual=providers-manual-original&textflow=true&resetSession=true"
                             class="govuk-link govuk-link--no-visited-state">original PDF content + text decision
                             tree</a><br>
-                        <a href="/4-0/manual-home?manual=providers-manual-2&svgflow=false&textflow=false&resetSession=true"
+                        <a href="/4-0/manual-home?manual=providers-manual-2&resetSession=true"
                             class="govuk-link govuk-link--no-visited-state">original PDF content + updated english
                             & maths content</a>
                     </li>
                     <li>
                         <span class="govuk-!-font-weight-bold">Employer Rules Manuals</span><br>
-                        <a href="/4-0/manual-home?manual=employers-manual-original&svgflow=false&resetSession=true"
+                        <a href="/4-0/manual-home?manual=employers-manual-original&resetSession=true"
                             class="govuk-link govuk-link--no-visited-state">original PDF content</a><br>
-                        <a href="/4-0/google?manual=employers-manual-original&svgflow=false&resetSession=true" class="govuk-link govuk-link--no-visited-state">original PDF content (from google)</a>
+                        <a href="/4-0/google?manual=employers-manual-original&resetSession=true" class="govuk-link govuk-link--no-visited-state">original PDF content (from google)</a>
                     </li>
                     <li>
                         <span class="govuk-!-font-weight-bold">Training Provider Rules Heavy Edit</span><br>
@@ -41,24 +41,24 @@
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 ">
                     <li>
                         <span class="govuk-!-font-weight-bold">Training Provider Rules Manuals</span><br>
-                        <a href="/3-0/manual-home?manual=providers-manual-original&svgflow=false&textflow=false&resetSession=true"
+                        <a href="/3-0/manual-home?manual=providers-manual-original&resetSession=true"
                             class="govuk-link govuk-link--no-visited-state">original PDF content</a><br>
-                        <a href="/3-0/google?manual=providers-manual-original&svgflow=false&textflow=false&resetSession=true"
+                        <a href="/3-0/google?manual=providers-manual-original&resetSession=true"
                             class="govuk-link govuk-link--no-visited-state">original PDF content (from google)</a><br>
-                        <a href="/3-0/manual-home?manual=providers-manual-original&svgflow=true&textflow=false&resetSession=true"
+                        <a href="/3-0/manual-home?manual=providers-manual-original&svgflow=true&resetSession=true"
                             class="govuk-link govuk-link--no-visited-state">original PDF content + flowchart</a><br>
-                        <a href="/3-0/manual-home?manual=providers-manual-original&svgflow=false&textflow=true&resetSession=true"
+                        <a href="/3-0/manual-home?manual=providers-manual-original&textflow=true&resetSession=true"
                             class="govuk-link govuk-link--no-visited-state">original PDF content + text decision
                             tree</a><br>
-                        <a href="/3-0/manual-home?manual=providers-manual-2&svgflow=false&textflow=false&resetSession=true"
+                        <a href="/3-0/manual-home?manual=providers-manual-2&resetSession=true"
                             class="govuk-link govuk-link--no-visited-state">original PDF content + updated english
                             & maths content</a>
                     </li>
                     <li>
                         <span class="govuk-!-font-weight-bold">Employer Rules Manuals</span><br>
-                        <a href="/3-0/manual-home?manual=employers-manual-original&svgflow=false&resetSession=true"
+                        <a href="/3-0/manual-home?manual=employers-manual-original&resetSession=true"
                             class="govuk-link govuk-link--no-visited-state">original PDF content</a><br>
-                        <a href="/3-0/google?manual=employers-manual-original&svgflow=false&resetSession=true" class="govuk-link govuk-link--no-visited-state">original PDF content (from google)</a>
+                        <a href="/3-0/google?manual=employers-manual-original&resetSession=true" class="govuk-link govuk-link--no-visited-state">original PDF content (from google)</a>
                     </li>
                     <li>
                         <span class="govuk-!-font-weight-bold">Training Provider Rules Heavy Edit</span><br>
